# OpenStackInAction

./: README.md
scripts/icehouse/opt/stack/pycadf/: CONTRIBUTING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
scripts/icehouse/opt/stack/pycadf/doc/: Makefile
scripts/icehouse/opt/stack/pycadf/doc/ext/: apidoc.py
scripts/icehouse/opt/stack/pycadf/doc/source/: conf.py  contributing.rst  debugging.rst  event_concept.rst  index.rst  middleware.rst
scripts/icehouse/opt/stack/pycadf/doc/source/specification/: attachments.rst  credentials.rst  endpoints.rst  events.rst  geolocations.rst  hosts.rst  identifiers.rst  index.rst  measurements.rst  paths.rst  reasons.rst  reportersteps.rst  resources.rst  tags.rst  taxonomy.rst  timestamps.rst
scripts/icehouse/opt/stack/pycadf/etc/pycadf/: cinder_api_audit_map.conf  glance_api_audit_map.conf  neutron_api_audit_map.conf  nova_api_audit_map.conf
scripts/icehouse/opt/stack/pycadf/pycadf/: attachment.py  cadftaxonomy.py  cadftype.py  credential.py  endpoint.py  event.py  eventfactory.py  geolocation.py  host.py  identifier.py  measurement.py  metric.py  path.py  reason.py  reporterstep.py  resource.py  tag.py  timestamp.py  utils.py
scripts/icehouse/opt/stack/pycadf/pycadf/audit/: api.py
scripts/icehouse/opt/stack/pycadf/pycadf/middleware/: audit.py  base.py  notifier.py
scripts/icehouse/opt/stack/pycadf/pycadf/openstack/common/: excutils.py  fileutils.py  gettextutils.py  (+4 more)
scripts/icehouse/opt/stack/pycadf/pycadf/tests/: base.py  test_cadf_spec.py  test_utils.py
(+394 files in other folders)
