[metadata]
name = pycadf
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = CADF Library
description-file =
    README.rst
home-page = https://launchpad.net/pycadf
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    pycadf
data_files =
    etc/pycadf =
        etc/pycadf/cinder_api_audit_map.conf
        etc/pycadf/glance_api_audit_map.conf
        etc/pycadf/neutron_api_audit_map.conf
        etc/pycadf/nova_api_audit_map.conf

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True
#autodoc_tree_index_modules = True
#autodoc_tree_root = ./pycadf

